tests/core/snapshots/resolve-with-headers.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Post {
  body: String!
  id: ID!
  title: String!
  userId: ID!
}

type Query {
  post1: Post
}

schema {
  query: Query
}
