tests/core/snapshots/resolve-with-vars.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  user: [User]
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
