tests/core/snapshots/resolve-with-vars.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server(vars: [{key: "id", value: "1"}]) @upstream {
  query: Query
}

type Query {
  user: [User] @http(url: "http://jsonplaceholder.typicode.com/users", query: [{key: "id", value: "{{.vars.id}}"}])
}

type User {
  id: Int
  name: String
}
