tests/core/snapshots/resolved-by-parent.md_client.snap
---
source: tests/core/spec.rs
expression: client
---
scalar BigInt

scalar Bytes

scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  user: User
}

scalar UnsignedInt

scalar Url

type User {
  address: String
}

schema {
  query: Query
}
