tests/core/snapshots/rest-api-post.md_merged.snap
---
source: tests/core/spec.rs
expression: merged
---
schema @upstream(baseURL: "http://jsonplaceholder.typicode.com") @link(src: "operation-user.graphql", type: Operation) {
  query: Query
}

type Query {
  user(id: Int!): User @http(path: "/users/{{.args.id}}")
}

type User {
  id: Int!
  name: String!
}
