tests/core/snapshots/routes-param-on-server-directive.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "users": [
        {
          "name": "Leanne Graham"
        }
      ]
    }
  }
}
